--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href = "https://bsky.app/profile/spaceicality.bsky.social"</script>
+<script>window.location.href = "https://bsky.app/profile/nolananderson.dev"</script>
